# dspy-one

./: .gitignore  LICENSE  README.md  pyproject.toml  run_all_demos.sh  setup.sh
cloudflare_mcp/: __init__.py  formatter.py  main.py  module.py  retriever.py  summarization.py  test_cloudflare_mcp.py
demo/: demo_clean_summary.py  demo_dspy_summarization.py  demo_rich_formatting.py  dspy_prediction_demo.py
doc_qa/: __init__.py  main.py
doc_qa/docs/: 10_duration_limits.txt  1_general_terms.txt  3_outdoor_coverage.txt  4_fixtures.txt  5_plumbing.txt  6_flooring.txt  7_appliances.txt  8_exclusions.txt
docs_qa_validate_answer/: __init__.py  main.py
docs_qa_validate_answer_with_persona/: __init__.py  main.py
echo_server_mcp/: __init__.py  main.py
example_warranty_docs/: 2_indoor_coverage.txt  9_claim_procedure.txt
no_dspy/: __init__.py  main.py
qa_common/: __init__.py  main.py
simple_math/: main.py
