[project]
name = "dspy-examples"
version = "0.1.0"
description = "A collection of CLI programs that demonstrate DSPy."
authors = [{ name = "Keng Lim", email = "lionkeng@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
  "dspy-ai",
  "python-dotenv", # For managing API keys
  "rich",          # For better CLI output
]

[project.scripts]
simple-math-cli = "simple_math.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["simple_math"]
